test/spec_vectors/simd_i16x8_arith/fail/module_1.wat
(module (func (result v128) (i16x8.neg (i32.const 0))))